ast/src/snapshots/transmute_ast__parser__tests__err_let_fn_params_missing_colon_before_type.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"let f(n integer) = { }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Expected `:`, got identifier",
                span: 1:9; [8, 15],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    452,
                ),
            },
        ],
    },
)
