ast/src/snapshots/transmute_ast__parser__tests__err_let_fn_params_missing_type.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"let f(n:) = { }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `)`, expected one of (1) identifier 428",
                span: 1:9; [8, 9],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    425,
                ),
            },
        ],
    },
)
