ast/src/snapshots/transmute_ast__parser__tests__err_let_fn_params_unwanted_comma.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"let x(,n:i,,m:j,) = { }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `,`, expected one of (1) `)` 471",
                span: 1:7; [6, 7],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    468,
                ),
            },
            Diagnostic {
                message: "Unexpected `,`, expected one of (2) identifier 416, `)` 471",
                span: 1:12; [11, 12],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    468,
                ),
            },
        ],
    },
)
