ast/src/snapshots/transmute_ast__parser__tests__err_let_missing_expression.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `;`, expected one of (10) identifier, number, string, `true`, `false`, `if`, `while`, `(`, `-`, `[`",
                span: 1:17; [16, 17],
                level: Error,
            },
        ],
        inputs: (),
    },
)
