ast/src/snapshots/transmute_ast__parser__tests__err_let_missing_identifier.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `=`, expected one of (1) identifier",
                span: 1:5; [4, 5],
                level: Error,
            },
        ],
        inputs: (),
    },
)
