ast/src/snapshots/transmute_ast__parser__tests__err_missing_semicolon_after_if_expression.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"if true { 1; } else{ 1; } - 1 12;\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected number(12), expected one of (13) `;` 1601, `.` 1040, `=` 1098, `*` 1209, `/` 1207, `-` 1203, `+` 1205, `==` 1191, `!=` 1193, `>` 1195, `>=` 1197, `<` 1199, `<=` 1201",
                span: 1:31; [30, 32],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    1601,
                ),
            },
        ],
    },
)
