ast/src/snapshots/transmute_ast__parser__tests__err_operator_illegal.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"41 $ 1;\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `$`, expected one of (13) `;` 1624, `.` 1063, `=` 1121, `*` 1232, `/` 1230, `-` 1226, `+` 1228, `==` 1214, `!=` 1216, `>` 1218, `>=` 1220, `<` 1222, `<=` 1224",
                span: 1:4; [3, 4],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    1624,
                ),
            },
        ],
    },
)
