ast/src/snapshots/transmute_ast__parser__tests__err_struct_instantiation_missing_close_curly_one_field_trailing_comma.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"S { a: a,\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `eof`, expected one of (2) identifier, `}`",
                span: 1:10; [9, 9],
                level: Error,
            },
        ],
    },
)
