ast/src/snapshots/transmute_ast__parser__tests__err_struct_instantiation_missing_first_field_name.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"S { : a, b: a, c: a };\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `:`, expected one of (2) identifier, `}`",
                span: 1:5; [4, 5],
                level: Error,
            },
        ],
    },
)
