ast/src/snapshots/transmute_ast__parser__tests__err_struct_instantiation_missing_first_field_value.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"S { a: , b: a, c: a };\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `,`, expected one of (8) identifier 941, number 942, `true` 944, `false` 945, `if` 939, `while` 940, `(` 946, `-` 943",
                span: 1:8; [7, 8],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    935,
                ),
            },
        ],
    },
)
